fixes alignment issues

--- a/unit1_projects/stylesheets/main.css
+++ b/unit1_projects/stylesheets/main.css
@@ -28,7 +28,8 @@ section:hover{
 	border: 1px solid black;
 }
 section article{
-	margin-top:5%;
+	display:block;
+	margin-top:10%;
 }
 
 footer{
@@ -36,6 +37,7 @@ footer{
 }
 
 section img{
+	display:inline-block;
 	border-radius:20%;
 	width:30%;
 	height:35%;
@@ -43,6 +45,7 @@ section img{
 }
 
 section img:hover{
+	display:inline-block;
 	border-radius:20%;
 	border: 1px solid black;
 	width:30%;
@@ -51,12 +54,12 @@ section img:hover{
 }
 
 section ul{
-	position:relative;
-	margin-right:20%;
-	margin-top:1%;
-	float:right;
-	font-size:1.3em;
+	vertical-align: top;
+	display:inline-block;
+	margin-left: 30%;
+	font-size:1.5em;
 }
+
 
 .wrapper{
 	width:60%;
@@ -78,12 +81,12 @@ a:visited{
 }
 
 a:hover{
-	color:gold;
+	color:#C48231;
 }
 
 @media screen and (max-width: 800px) {
   .wrapper{
-		width:60%;
+		width:75%;
 		max-width: 500px;
 		margin:auto;
 	}
@@ -92,26 +95,31 @@ a:hover{
 		line-height:1.5;
 		margin-bottom:5%;
 	}
+
+	section ul{
+	display:inline-block;
+	margin-top:1%;
+	font-size:1.3em;
+	}
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 500px) {
   .wrapper{
-		width:75%;
+		width:60%;
 		max-width: 400px;
 		margin:auto;
 	}
 
+	section ul{
+	display:inline-block;
+	position:relative;
+	margin-top:1%;
+	font-size:1.2em;
+}
+
 	.headwrap{
 		line-height:1.5;
 		margin-bottom:2.5%;
-	}
-
-	section ul{
-		position:relative;
-		margin-right:20%;
-		margin-top:1%;
-		float:right;
-		font-size:1.0em;
 	}
 
 }
